--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-.DS_STORE
-*.pyc
+# OS Generated files
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Visual Studio Code
 .vscode
 
+# Python
 __pycache__/
+
+# Other
 scratch.py
